add a new main.uri sensor in Attributes, similar idea but wider scope to WebAppService.ROOT_URL